--- a/native/build.gradle
+++ b/native/build.gradle
@@ -48,11 +48,29 @@ checkstyle {
 }
 
 def excludePattern = '**/module-info.java'
-tasks.withType(Checkstyle) {
+tasks.withType(Checkstyle).configureEach {
     exclude excludePattern
 }
 
 checkstyleMain.dependsOn(":checkstyle:downloadCheckstyleRuleFiles")
+
+spotbugsMain {
+    effort "max"
+    reportLevel "low"
+    reportsDir = file("$project.buildDir/reports/spotbugs")
+    reports {
+        html.enabled true
+        text.enabled = true
+    }
+    def excludeFile = file("${rootDir}/spotbugs-exclude.xml")
+    if(excludeFile.exists()) {
+        excludeFilter = excludeFile
+    }
+}
+
+spotbugsTest {
+    enabled = false
+}
 
 compileJava {
     doFirst {
